adds index.html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>Jaskirat Kaur</title>
 </head>
 <body>
-   <h1>JAskirat Kaur</h1>
+   <h1>Jaskirat Kaur</h1>
+   <img src="image/20230423_163706.jpg" width="300" 
+   height="400" alt="my image">
+
+ <dl>
+    <dt>Student no.</dt>
+   <dd> 041096390</dd>
+
+   <dt>program </dt>
+   <dd>Interactive Media Design</dd>
+
+   <dt>Course</dt>
+   <dd>MTM6201 - web dev II</dd>
+
+   
+    <dt>Interesting fact</dt>
+    <dd> I don't love  people who can't even organised thier closet.</dd>
+ </dl>
     
 </body>
 </html>
